--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -349,6 +349,21 @@
     "patched": "This file has been patched locally",
     "showContents": "Show contents"
   },
+  "PackageViewLogs": {
+    "actions": {
+      "clear": {
+        "description": "Clear logs",
+        "label": "Clear"
+      }
+    },
+    "banner": {
+      "description": "{{size, bytes, paren}}"
+    },
+    "noLogs": {
+      "description": "Logs should appear here after running the game.",
+      "title": "No logs found"
+    }
+  },
   "PackageViewLots": {
     "bulldoze": "Bulldoze cost",
     "category": "Category",
@@ -388,6 +403,7 @@
     "dependencies_other": "{{count}} dependencies",
     "files_one": "{{count}} file",
     "files_other": "{{count}} files",
+    "logs": "Logs",
     "lots_one": "{{count}} lot",
     "lots_other": "{{count}} lots",
     "mmps_one": "{{count}} MMP",
