--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -400,16 +400,22 @@
     "flamability": "Flamability",
     "garbage": "Garbage production",
     "includeLot": "Include lot",
+    "landmark": "Landmark effect",
+    "maintenance": "Maintenance cost",
+    "overTiles_one": "{{amount}} over {{count}} tile",
+    "overTiles_other": "{{amount}} over {{count}} tiles",
+    "overTiles_zero": "{{amount}}",
     "pollution": "Air pollution",
     "power": "Energy consumption",
     "powerProduction": "Energy production",
+    "radiation": "Radiation",
+    "rating": "Mayor rating effectt",
     "requirements": "Requirements",
     "size": "Size",
     "stage": "Growth stage",
     "water": "Water consumption",
     "waterPollution": "Water pollution",
-    "waterProduction": "Water production",
-    "yimby": "YIMBY"
+    "waterProduction": "Water production"
   },
   "PackageViewMMPs": {
     "category": "Category",
