--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -409,7 +409,7 @@
     "power": "Energy consumption",
     "powerProduction": "Energy production",
     "radiation": "Radiation",
-    "rating": "Mayor rating effectt",
+    "rating": "Mayor rating effect",
     "requirements": "Requirements",
     "size": "Size",
     "stage": "Growth stage",
