Categorized DBPF entries

--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -102,6 +102,40 @@
     },
     "title": "Create local variant"
   },
+  "DBPFEntryCategory": {
+    "exemplars_one": "{{count}} exemplar",
+    "exemplars_other": "{{count}} exemplars",
+    "images_one": "{{count}} image",
+    "images_other": "{{count}} images",
+    "models_one": "{{count}} model",
+    "models_other": "{{count}} models",
+    "others_one": "{{count}} other",
+    "others_other": "{{count}} others",
+    "textures_one": "{{count}} texture",
+    "textures_other": "{{count}} textures"
+  },
+  "DBPFEntryType": {
+    "bmp": "BMP",
+    "dir": "DIR",
+    "cohort": "Cohort",
+    "exemplar": "Exemplar",
+    "fsh": "FSH",
+    "fsh.texture": "Texture",
+    "jfif": "JFIF",
+    "ld": "Lot Definition",
+    "png": "PNG",
+    "png.button": "Button",
+    "png.le-image": "Lot Editor Image",
+    "png.lot-image": "Lot Picture",
+    "png.menu-icon": "Menu Icon",
+    "png.region-view-tile": "Region View Tile",
+    "png.udrive-icon": "UDriveIt Icon",
+    "png.ui": "UI",
+    "png.ui-image": "UI Image",
+    "s3d": "S3D",
+    "unknown": "Unknown",
+    "xml": "XML"
+  },
   "DisableIncompatiblePackagesModal": {
     "cancel": "$t(General:cancel)",
     "confirm": "Disable incompatible packages",
@@ -123,6 +157,41 @@
   "EnableOptionalDependencies": {
     "confirmation": "Enable optional dependencies?",
     "description": "{{packageName}} specifies the following optional dependencies:\n{{dependencies, join(multiline: true)}}\n\nDo you want to enable them?"
+  },
+  "ExemplarType": {
+    "Aircraft": "Aircraft",
+    "Audio": "Audio",
+    "AutomataTuning": "Automata Tuning",
+    "Bridge": "Bridge",
+    "Building": "Building",
+    "Construction": "Construction",
+    "Crime": "Crime",
+    "DataView": "Data View",
+    "Developer": "Developer",
+    "Disaster": "Disaster",
+    "Flora": "Flora",
+    "Foundation": "Foundation",
+    "GodMode": "God Mode",
+    "GraphControl": "Graph Control",
+    "Highway": "Highway",
+    "Lighting": "Lighting",
+    "LotConfig": "Lot Config",
+    "LotRetainingWall": "Lot Retaining Wall",
+    "MayorMode": "Mayor Mode",
+    "Ordinance": "Ordinance",
+    "Pedestrian": "Pedestrian",
+    "PowerLine": "Power Line",
+    "Prop": "Prop",
+    "RCI": "RCI",
+    "Rail": "Rail",
+    "Road": "Road",
+    "Simulator": "Simulator",
+    "Tuning": "Tuning",
+    "Terrain": "Terrain",
+    "TrendBar": "TrendB ar",
+    "T21": "T21",
+    "Unknown": "Unknown",
+    "Vehicle": "Vehicle"
   },
   "Features": {
     "cam": {
