Add menu/submenu fields to lots

--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -475,6 +475,7 @@
     "includeLot": "Include lot",
     "landmark": "Landmark effect",
     "maintenance": "Maintenance cost",
+    "menu": "Menu",
     "overTiles_one": "{{amount}} over {{count}} tile",
     "overTiles_other": "{{amount}} over {{count}} tiles",
     "overTiles_zero": "{{amount}}",
