--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -466,13 +466,14 @@
   },
   "PackageViewLots": {
     "bulldoze": "Bulldoze cost",
+    "capacity": "Capacity",
     "category": "Category",
     "cost": "Plop cost",
-    "demand": "Occupants",
     "excludeLot": "Exclude lot",
     "flamability": "Flamability",
     "garbage": "Garbage production",
     "includeLot": "Include lot",
+    "jobs": "Jobs",
     "landmark": "Landmark effect",
     "maintenance": "Maintenance cost",
     "menu": "Menu",
@@ -484,6 +485,7 @@
     "powerProduction": "Energy production",
     "radiation": "Radiation",
     "rating": "Mayor rating effect",
+    "relief": "Cap relief",
     "requirements": "Requirements",
     "size": "Size",
     "stage": "Growth stage",
