--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -527,12 +527,13 @@
     "requirements": "Requirements"
   },
   "PackageViewSummary": {
-    "authors": "Authors",
     "category": "Category",
+    "credits": "Credits",
     "features": "Features",
     "requirements": "Requirements",
     "repository": "Source code",
     "support": "Support thread",
+    "thanks": "Thanks",
     "url": "Download page"
   },
   "PackageViewTabs": {
