--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -124,6 +124,7 @@
     "fsh.texture": "Texture",
     "jfif": "JFIF",
     "ld": "Lot Definition",
+    "ltext": "LTEXT",
     "png": "PNG",
     "png.button": "Button",
     "png.le-image": "Lot Editor Image",
